--- a/src/index.html
+++ b/src/index.html
@@ -6,11 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Homework 7</title>
     <link rel="stylesheet" href="css/common.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.css" integrity="sha256-r7Neol40GubQBzMKAJovEaXbl9FClnADCrIMPljlx3E=" crossorigin="anonymous">
   </head>
   <body>
     <ul>
       <li><a href="01-gallery.html">Image gallery</a></li>
       <li><a href="02-lightbox.html">SimpleLightbox library</a></li>
     </ul>
+
+    <script src="https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.js" integrity="sha256-nMn34BfOxpKD0GwV5nZMwdS4e8SI8Ekz+G7dLeGE4XY=" crossorigin="anonymous"></script>
   </body>
 </html>
